--- a/css/main.css
+++ b/css/main.css
@@ -395,7 +395,27 @@ th {
 }
 
 * {
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+#header {
+  height: 60px;
+  width: 100%;
+  background-color: #14AD7C;
+}
+
+#body {
+  margin-top: 60px;
+  width: 100%;
+  background-color: #fff;
+}
+
+#footer {
+  position: absolute;
+  width: 100%;
+  height: 120px;
+  bottom: 0;
+  background-color: #ccc;
 }
