Update css, add mock.html so that I can easily style the page the way I like.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "compass";
+@import "partials/variables";
 @import "partials/normalize";
 @import "partials/general";
 @import "partials/layout";
