--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -1,18 +1,25 @@
+body {
+	background: {
+		image: image-url('masking-background.png'), image-url('pressing-on-red.jpg');
+		repeat: repeat-x, no-repeat;
+		attachment: fixed, fixed;
+		position: center 120px, center 120px;
+		size: contain, contain;
+	}
+}
+
 #header {
-	height: 60px;
+	height: 120px;
 	width: 100%;
 	background: {
-		color: #14AD7C;
+		color: $headerBackground;
 	}
 }
 
 #body {
-	margin: {
-		top: 60px;
-	}
 	width: 100%;
 	background: {
-		color: #fff;
+		color: $colorWhite;
 	}
 }
 
@@ -22,6 +29,8 @@
 	height: 120px;
 	bottom: 0;
 	background: {
-		color: #ccc;
+		color: $footerBackground;
 	}
 }
+
+@import "header";
