--- a/css/main.css
+++ b/css/main.css
@@ -400,14 +400,21 @@ th {
   box-sizing: border-box;
 }
 
+body {
+  background-image: url('../images/masking-background.png?1444106467'), url('../images/pressing-on-red.jpg?1444103864');
+  background-repeat: repeat-x, no-repeat;
+  background-attachment: fixed, fixed;
+  background-position: center 120px, center 120px;
+  background-size: contain, contain;
+}
+
 #header {
-  height: 60px;
+  height: 120px;
   width: 100%;
-  background-color: #14AD7C;
+  background-color: #2ecdc9;
 }
 
 #body {
-  margin-top: 60px;
   width: 100%;
   background-color: #fff;
 }
@@ -418,4 +425,16 @@ th {
   height: 120px;
   bottom: 0;
   background-color: #ccc;
+}
+
+#logo {
+  position: relative;
+  width: 318px;
+  height: 88px;
+  background-image: url('../images/logo.png?1444109985');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top left;
+  top: 18px;
+  left: 38px;
 }
