Update navigation module, Fix styling issues and added default pageHeader, pageBody and pageFooter. Reduced image size.

--- a/css/main.css
+++ b/css/main.css
@@ -399,14 +399,16 @@ th {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  font-family: "Roboto Light", sans-serif;
 }
 
 body {
-  background-image: url('../images/masking-background.png?1444106467'), url('../images/pressing-on-red.jpg?1444103864');
+  background-image: url('../images/masking-background-1200.png?1469203292'), url('../images/pressing-on-red-1200.jpg?1469203180');
   background-repeat: repeat-x, no-repeat;
   background-attachment: fixed, fixed;
   background-position: center 120px, center 120px;
   background-size: contain, contain;
+  min-width: 960px;
 }
 
 #header {
@@ -485,4 +487,8 @@ body {
   #navigation-container a {
     font-size: 100%;
   }
+}
+#footer span {
+  line-height: 120px;
+  margin-left: 38px;
 }
