--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -15,7 +15,7 @@
 
 #navigation-container {
 	float: right;
-	margin-right: 38px;
+	margin-right: $pageSidePadding;
 	ul {
 		float: left;
 		list-style: none;
