Update global style, add homepage message, add instafeed to test it out.

--- a/css/main.css
+++ b/css/main.css
@@ -403,28 +403,28 @@ th {
 }
 
 body {
-  background-image: url('../images/masking-background-1200.png?1469203292'), url('../images/pressing-on-red-1200.jpg?1469203180');
-  background-repeat: repeat-x, no-repeat;
-  background-attachment: fixed, fixed;
-  background-position: center 120px, center 120px;
-  background-size: contain, contain;
   min-width: 960px;
 }
 
-#header {
+#page-header {
   height: 120px;
-  width: 100%;
+  width: 100vw;
   background-color: #2ecdc9;
 }
 
-#body {
-  width: 100%;
-  background-color: #fff;
+#page-body {
+  width: 100vw;
+  height: 31.25vw;
+  min-height: 300px;
+}
+#page-body .content.homepage {
+  position: relative;
+  top: 31.25vw;
 }
 
-#footer {
+#page-footer {
   position: absolute;
-  width: 100%;
+  width: 100vw;
   height: 120px;
   bottom: 0;
   background-color: #ccc;
@@ -435,10 +435,6 @@ body {
   display: inline-block;
   width: 318px;
   height: 88px;
-  background-image: url('../images/logo.png?1444109985');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top left;
   top: 18px;
   left: 38px;
 }
@@ -459,6 +455,22 @@ body {
 #navigation-container li:first-child {
   margin-left: 0;
 }
+#navigation-container a {
+  padding-bottom: 17px;
+}
+
+@media (max-width: 1024px) {
+  #navigation-container ul {
+    margin-top: 75px;
+  }
+}
+#logo {
+  background-image: url('../images/logo.png?1444109985');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top left;
+}
+
 #navigation-container li.selected a {
   color: #cd2e32;
   border-bottom-width: 3px;
@@ -473,7 +485,6 @@ body {
   -webkit-transition-duration: 0.6s;
   transition-duration: 0.6s;
   border-bottom: 0px solid #cd2e32;
-  padding-bottom: 17px;
 }
 #navigation-container a:hover {
   color: #cd2e32;
@@ -481,14 +492,19 @@ body {
 }
 
 @media (max-width: 1024px) {
-  #navigation-container ul {
-    margin-top: 75px;
-  }
   #navigation-container a {
     font-size: 100%;
   }
 }
-#footer span {
+#page-body {
+  background-image: url('../images/masking-background-1200.png?1469203292'), url('../images/pressing-on-red-1200.jpg?1469203180');
+  background-repeat: repeat-x, no-repeat;
+  background-attachment: fixed, fixed;
+  background-position: center 120px, center 120px;
+  background-size: contain, contain;
+}
+
+#page-footer span {
   line-height: 120px;
   margin-left: 38px;
 }
