--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -12,6 +12,10 @@ $orange-cd2e32: #cd2e32;
 $pageFontFamily: 'Roboto Light', sans-serif;
 $pageSidePadding: 38px;
 
+$minPageWidth: 960px;
+$pageWidth: 100vw;
+
+$headerHeight: 120px;
 $headerBackground: $blue-2ecdc9;
 $navigationLinkColor: $colorWhite;
 $navigationLinkColorHover: $orange-cd2e32;
