--- a/js/templates/layout.hbs
+++ b/js/templates/layout.hbs
@@ -1,3 +1,3 @@
-<div id="header"></div>
-<div id="body"></div>
-<div id="footer"></div>
+<div id="page-header"></div>
+<div id="page-body"></div>
+<div id="page-footer"></div>
