--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -3,12 +3,6 @@
 	display: inline-block;
 	width: 318px;
 	height: 88px;
-	background: {
-		image: image-url('logo.png');
-		size: contain;
-		repeat: no-repeat;
-		position: top left;
-	}
 	top: 18px;
 	left: 38px;
 }
@@ -27,25 +21,9 @@
 		&:first-child {
 			margin-left: 0;
 		}
-		&.selected {
-			a {
-				color: $navigationLinkColorHover;
-				border-bottom-width: 3px;
-			}
-		}
 	}
 	a {
-		font-size: 26px;
-		color: $navigationLinkColor;
-		font-family: $navigationLinkFontFamily;
-		text-decoration: none;
-		@include transition-duration(0.6s);
-		border-bottom: 0px solid $navigationLinkColorHover;
 		padding-bottom: 17px;
-		&:hover {
-			color: $navigationLinkColorHover;
-			border-bottom-width: 3px;
-		}
 	}
 }
 
@@ -54,8 +32,7 @@
 		ul {
 			margin-top: 75px;
 		}
-		a {
-			font-size: 100%;
-		}
 	}
 }
+
+@import "header.style";
