--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -21,5 +21,8 @@ $navigationLinkColor: $colorWhite;
 $navigationLinkColorHover: $orange-cd2e32;
 $navigationLinkFontFamily: $pageFontFamily;
 
+$bodyFontSize: 36px;
+$startOfTheLineColor: $orange-cd2e32;
+
 $footerBackground: $gray-ccc;
 $footerHeight: 120px;
