--- a/js/templates/homepage.message.hbs
+++ b/js/templates/homepage.message.hbs
@@ -1,2 +1,2 @@
-<span class="start-of-the-line">h</span>i, I'm Daniel Zhu. A web developer, a gamer and a technology tinker. i enjoy a
-nice saturday nap at noon and good sushi. And live an Apple free life.
+<span class="start-of-the-line">h</span>i, i'm Daniel Zhu. A web developer, a gamer and a technology tinker. i enjoy a
+nice saturday nap at noon and good sushi. and living an Apple free life.
