--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -53,3 +53,15 @@ body {
 @import "page.header";
 @import "page.body.style";
 @import "page.footer";
+@media (min-width: 1800px) {
+	#page-body {
+		.content{
+			padding: 5px 0;
+			&.resume {
+				iframe {
+					height: calc(100vh - #{$headerHeight + $footerHeight} - 10px);
+				}
+			}
+		}
+	}
+}
