--- a/sass/partials/_page.body.style.scss
+++ b/sass/partials/_page.body.style.scss
@@ -15,7 +15,7 @@
 			line-height: 1;
 			.start-of-the-line {
 				font: {
-					size: 60px;
+					size: $bodyFontSize * 1.7;
 					family: 'Roboto Thin', sans-serif;
 				}
 				color: $startOfTheLineColor;
@@ -32,6 +32,26 @@
 						repeat: no-repeat;
 						position: 0 0;
 					}
+				}
+			}
+		}
+		&.contact {
+			background: {
+				color: rgba(0, 0, 0, 0.7);
+			}
+			color: $colorWhite;
+			font-size: $bodyFontSize * 0.5;
+			.self {
+				.start-of-the-line {
+					font: {
+						size: $bodyFontSize * 0.55;
+					}
+					color: $startOfTheLineColor;
+				}
+			}
+			.contact-info {
+				a {
+					color: $contactInfoLinkColor;
 				}
 			}
 		}
