--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -24,5 +24,7 @@ $navigationLinkFontFamily: $pageFontFamily;
 $bodyFontSize: 36px;
 $startOfTheLineColor: $orange-cd2e32;
 
+$contactInfoLinkColor: $orange-cd2e32;
+
 $footerBackground: $gray-ccc;
 $footerHeight: 120px;
