Update contact and homepage templates

--- a/js/templates/contact.hbs
+++ b/js/templates/contact.hbs
@@ -11,10 +11,10 @@
 	doing front end stuff, html/css, not a lot of javascript yet but was able to create a Flash project that helps
 	customers configure laptop for purchase.</p>
 
-	<p><span class="start-of-the-line">F</span>ast forward, I joined a startup hoping for some stock option and get quick rich. It didn't work out the way I
+	<p><span class="start-of-the-line">F</span>ast forward, I joined a startup hoping for some stock option and get rich quick. It didn't work out the way I
 	thought it would be but I learned a lot from the company and formed a great bound with my boss. I
-	learnt PHP, javascript, SEO and some advanced film editing skills. Great experience while it lasted. I've got
-	nothing but gratitude for everybody I worked with at Brightstorm.</p>
+	learned PHP, javascript, SEO and some advanced film editing skills. Great experience while it lasted. I've got
+	nothing but gratitude for everybody I've worked with at Brightstorm.</p>
 
 	<p><span class="start-of-the-line">T</span>he next step in my career is with SolutionSet. It was an agency, life is fast there, multiple clients and
 		projects at all times. I get to work with Apple, Nike, SAP, Genetech, TiVo and a whole lot of other big name
